Bug 155507 - Writer collaborative performance with numbering in document
Summary: Writer collaborative performance with numbering in document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:24.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-26 09:45 UTC by Caolán McNamara
Modified: 2023-06-11 20:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2023-05-26 09:45:54 UTC
Description:
Clicking before numbering, or using the keyboard to set the cursor before numbering has a feature in writer that the selected or "marked" numbering is redrawn with the field background to indicate that the cursor is inside one of the bullets of the family.

But if IsFieldShadings() is off then they just get redrawn the same so this is wasted effort in that scenario

Steps to Reproduce:
1. turn off "field shading"
2. put a break point in SwCursorShell::MarkListLevel
3. before some numbering click in the left margin of the page before it

Actual Results:
4. SwTextNode::NumRuleChgd will be called and the CallSwClientNotify of "Sending "noop" modify in order to cause invalidations" is triggered, but there is no visual difference

Expected Results:
to skip this path in the case that field shadings are disabled


Reproducible: Always


User Profile Reset: No

Additional Info:
.
Comment 1 Commit Notification 2023-05-26 12:37:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9581d7ada7d6a0e62653bdfa1e419ede6324970

tdf#155507 don't redraw numbering when cursor enters it, if...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-05-26 15:30:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1354d0ffcabc6e7f78767e8cac1e8c127d4e4b6c

Related: tdf#155507 Only need this invalidate if using header/footer controls

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-05-26 15:37:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31f2de053d89fc782f98f74785643dbd6e19ba73

Related: tdf#155507 disable HeaderFooter menu for tiled rendering

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-05-31 14:52:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8811bf5aa94df5beff2249e1f51d383b3df6409c

Related: tdf#155507 don't enable field shadings in online case

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-11 20:17:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5a973fee90820b529e5fbafbef35917625ffd19

Related: tdf#155507 don't broadcast UI Theme change unless it did change

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.